<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Delhi Police</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to register -->
    <string name="prompt_name">Name</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_phoneno">Mobile Number</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_complain_lodge">ComplainLodge</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="send_email_text">Send Email</string>
    <string name="mail_intent_chooser_text">Send mail...</string>
    <string name="no_email_client_error">There are no email clients installed.</string>
    <string name="copy_text">Copy to clipboard</string>
    <string name="clipboard_copy_successful_message">Copied to clipboard.</string>



    <!-- Status Strings -->
    <string name="new_status">New Status</string>
    <string name="pending">Pending</string>
    <string name="approve_payment">Approve Payment</string>
    <string name="pending_payment">Pending Payment</string>
    <string name="completed">Completed</string>

</resources>
